// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Other|/examples/official-storybook/stories/Dirname Example story 1 1`] = `
<button>
  Story 1
</button>
`;

exports[`Storyshots Other|/examples/official-storybook/stories/Dirname Example story 2 1`] = `
<button>
  Story 2
</button>
`;

exports[`Storyshots Other|examples/official-storybook/stories/Dirname Example story 1 1`] = `
<button>
  Story 1
</button>
`;

exports[`Storyshots Other|examples/official-storybook/stories/Dirname Example story 2 1`] = `
<button>
  Story 2
</button>
`;
